<resources>
    <string name="app_name">Mycalculator</string>
    <string name="c">C</string>
    <string name="danish">(</string>
    <string name="closebraket">)</string>
    <string name="dividee">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multi">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="plus">+</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="minus">-</string>
    <string name="_0">0</string>
    <string name="ac">AC</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
    <string name="_139649">139649</string>
    <string name="_96_3_5_6_3_8_6366_6666_6555">96+3-5*(6+3)+8+6366+6666+6555</string>
</resources>